# House-Price-Prediction-KG

./: HPP-EDA-DP-1.ipynb  HPP-Part One.ipynb  HPP-Part Two.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
data/feature-selection/: dataset-wo-fe-2-new-ord-enc.json  dataset-wo-outliers-shap_fs-3.json  dataset-wo-outliers-shap_fs-4.json
data/outlier-exclusion/: dataset-w-outliers-new-ord-enc.json  dataset-w-outliers.json  dataset-wo-outliers-new-ord-enc.json  dataset-wo-outliers.json  dataset-wo-outliers_2.json
data/submissions/: fs_4_test_1.csv  fs_4_test_2.csv
data/submissions/August-2024/: fs_4_test_15_08_2024-07_51_33.csv  test_fe_1_blend_models_log1p-2_23_08_2024-14_54_04.csv  test_fe_1_blend_models_log1p_23_08_2024-14_47_05.csv  test_fe_1_blend_models_log1p_23_08_2024-16_41_31.csv  test_fe_2_blend_models_log1p_16_08_2024-18_30_38.csv  test_fe_blend_models_log1p_16_08_2024-18_45_53.csv  test_new_ord_enc_w_outliers_15_08_2024-19_47_29.csv  test_new_ord_enc_wo_outliers_15_08_2024-22_39_05.csv
